# box-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Display/: DisplayController.cpp  DisplayController.h  sugar.cmake
Documents/: design-thoughts.md
Game Controller/: GameController.cpp  GameController.h  sugar.cmake
Input/: OpenGlUserInput.cpp  OpenGlUserInput.h  UserInput.cpp  UserInput.h  sugar.cmake
Objects/: sugar.cmake
Objects/Box/: BoxController.cpp  BoxController.h  BoxData.cpp  BoxData.h  BoxVAO.cpp  BoxVAO.h  BoxView.cpp  BoxView.h  BoxViewService.cpp  BoxViewService.h  FragmentShader.glsl  VertexShader.glsl  sugar.cmake
Objects/Camera/: CameraController.cpp  CameraController.h  CameraData.cpp  CameraData.h  sugar.cmake
RenderSettings/: RenderSettings.cpp  RenderSettings.h  sugar.cmake
Resources/: resource_path.cpp  resource_path.hpp  sugar.cmake
ShaderGen/: Shaders.cpp  Shaders.h  sugar.cmake
Textures/: sugar.cmake
Textures/TextureGen/: TextureGen.cpp  TextureGen.h  sugar.cmake
